K8S/aws/node-js.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: hamz45/hello-node
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
spec:
  selector:
    app: node-app
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
