K8S/aws/service-b.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
        - name: service-b
          image: hamz45/service-b
          ports:
            - containerPort: 4000
          
          







          
          
               
      
             

---
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: 4000
